# gaze-study-project

./: .gitignore  LICENSE  README.md  plot_all.ps1  pyproject.toml  requirements.txt
configurations/: filters_config.yaml  filters_d_only_config.yaml
docs/: study-details.md
docs/source/: api.rst  conf.py  index.rst
docs/source/_templates/autosummary/: class.rst
docs/source/api_sections/: aliases.rst  constants.rst  data_analysis.rst  data_import.rst  data_plotting.rst  data_structures.rst  export.rst  utilities.rst
scripts/: classification_script.py  data_analysis.py  data_analysis_script.py  export_script.py  extract_features_script.py  extract_timeseries_script.py  instruction_time_script.py  max_diameter_script.py  plot_all.ps1  processing_script.py  pupil_stats_script.py  resample_script.py  results_script.py  saccades_script.py  split_session_log_fix_script.py  time_difference_script.py
scripts/conference_paper/: plot_features.py  plotting.py
src/pupiltools/: aliases.py  constants.py  data_analysis.py  data_import.py  data_plotting.py  data_structures.py  export.py  utilities.py
