[build-system]
requires = ["setuptools>=64", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pupiltools"
authors = [
    {name = "Shane Forbrigger", email = "66395421+briforsaur@users.noreply.github.com"},
]
description = "Tools for interacting with and managing output of the Pupil Core headset"
requires-python = ">=3.11"
dependencies = [
    "msgpack",
    "numpy",
    "h5py",
    "matplotlib",
    "scipy",
    "scikit-learn",
]
dynamic = ["version"]

[tool.setuptools_scm]